--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
 
 <p>This is a collection of tweaks to Sublime Text's JavaScript file handling, focused mainly on improving symbol navigation.</p>
 
-<p>The default JavaScript language definition in Sublime Text considers anonymous functions, object instantiation like <code>new Foo()</code>, and <code>console.log()</code> calls to be symbols, causing your "Goto Symbol..." menu to become cluttered and useless.</p>
+<p>The default JavaScript language definition in Sublime Text has <em>quirky</em> symbol identification, and fills your symbols list with noise like anonymouse functions, object instantiation, and even calls to console.log().</p>
 
-<p>This project fixes Sublime so only named function definitions and function prototype attributes show up in the symbol list. It also fixes how these symbols are displayed in the symbol list, so that only the function name is shown, so <code>function Foo()</code> becomes just <code>Foo</code>, <code>Bar.foo = function()</code> becomes <code>Bar.foo</code>, and so on. </p>
+<p><img src="http://int3h.github.io/sublime-better-javascript/images/screenshot-bad-symbols.png" alt="Useless Symbol List"></p>
+
+<p>This project fixes Sublime so only named function definitions and function prototype attributes show up in the symbol list. It also fixes how these symbols are displayed in the symbol list, so that only the function names are shown.</p>
+
+<p><img src="http://int3h.github.io/sublime-better-javascript/images/screenshot-good-symbols.png" alt="Improved Symbol List"></p>
 
 <p>These tweaks have been tested on Sublime Text 2 and 3.</p>
 
