Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sublime-better-javascript by int3h</title>
+    <title>Sublime Better Javascript by int3h</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -17,9 +15,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Sublime-better-javascript</h1>
+        <h1>Sublime Better Javascript</h1>
         <p>Fixes to Sublime Text's JavaScript handling</p>
+
         <p class="view"><a href="https://github.com/int3h/sublime-better-javascript">View the Project on GitHub <small>int3h/sublime-better-javascript</small></a></p>
+
+
         <ul>
           <li><a href="https://github.com/int3h/sublime-better-javascript/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/int3h/sublime-better-javascript/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -45,12 +46,12 @@
 <h2>
 <a name="installing" class="anchor" href="#installing"><span class="octicon octicon-link"></span></a>Installing</h2>
 
-<p><code>cd</code> to your Sublime Text packages directory (you can find it via the "Preferences -&gt; Browse Packages..." menu item; with ST3 on Mac OS X, this is <code>~/Library/Application\ Support/Sublime\ Text\ 3/Packages/</code>, for example.) Then checkout this repo into a folder named <code>JavaScript</code>:</p>
+<p><code>cd</code> to your Sublime Text packages directory (you can find it via the "Preferences -&gt; Browse Packages..." menu item; with ST3 on Mac OS X, this is <code>~/Library/Application\ Support/Sublime\ Text\ 3/Packages/</code>, for example.) Then close the repo into a folder named <code>JavaScript</code>:</p>
 
 <pre><code>git clone https://github.com/int3h/sublime-better-javascript.git JavaScript
 </code></pre>
 
-<p>Alternatively, you can manually create a <code>JavaScript</code> subdirectory in your packages directory, and <a href="https://github.com/int3h/sublime-better-javascript/archive/master.zip">download</a> and extract the contents of this repo to that folder.</p>
+<p>Alternatively, you can <a href="https://github.com/int3h/sublime-better-javascript/zipball/master">download</a> and extract the contents to a directory named "JavaScript" in your Packages directory (it must be that exact name to work.)</p>
 
 <h3>
 <a name="refreshing-the-symbols-of-existing-files" class="anchor" href="#refreshing-the-symbols-of-existing-files"><span class="octicon octicon-link"></span></a>Refreshing the symbols of existing files</h3>
@@ -84,12 +85,12 @@
 <li><p><strong>Other issues?</strong> Feel free to open up an issue here if you're having trouble, or have ideas for improvements. I am also very receptive to pull requests.</p></li>
 </ul>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/int3h">int3h</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/int3h">int3h</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
