--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>This is a collection of tweaks to Sublime Text's JavaScript file handling, focused mainly on improving symbol navigation.</p>
 
-<p>The default JavaScript language definition in Sublime Text has <em>quirky</em> symbol identification, and fills your symbols list with noise like anonymouse functions, object instantiation, and even calls to console.log().</p>
+<p>The default JavaScript language definition in Sublime Text has <em>quirky</em> symbol identification, and fills your symbols list with noise like anonymous functions, object instantiation, and even calls to console.log().</p>
 
 <p><img src="http://int3h.github.io/sublime-better-javascript/images/screenshot-bad-symbols.png" alt="Useless Symbol List"></p>
 
